Fix marginal collapsing

--- a/Domeeni veebileht/styles/global.css
+++ b/Domeeni veebileht/styles/global.css
@@ -7,4 +7,5 @@
 
 .sub-container {
     height: 100vh;
+    overflow: hidden;
 }
